# Clipboard-Share

./: .gitignore  README.md
client-linugs/: CMakeLists.txt
client-linugs/source/: main.cpp
client-rust/: Cargo.toml
client-rust/src/: main.rs
client-wandows/headers/: ClipboardManager.h  Device.h  const.hpp
client-wandows/source/: ClipboardManager.cpp
client-wandows/windows/: windows.sln
client-wandows/windows/clipboard-share-client-windows/: Resource.h  clipboard-share-client-windows.rc  clipboard-share-client-windows.vcxproj  clipboard-share-client-windows.vcxproj.filters  config.json  cps.cpp
server-py/: old-server.py  server.py  tester.py
server-wandows/: server.py  tester.py
