[package]
name = "clipsync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-master = "3.1.1"
clipboard = "0.5.0"
local_ipaddress = "0.1.3"
tokio = { version = "1.11.0", features = ["full"] } 
futures = "0.3.17"
